--- a/AdMon/res/values/strings.xml
+++ b/AdMon/res/values/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">admon</string>
+    <string name="app_name">AdHub</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="main_text_enterid">Enter ID Code</string>
+    <string name="main_text_enterid">Enter Ad Hub Code</string>
     <string name="main_button_submit">Submit</string>
-    <string name="title_activity_details">DetailsActivity</string>
+    <string name="title_activity_details">Details of Ad</string>
     <string name="details_text_name">Name</string>
     <string name="details_text_price">Rs. 0</string>
     <string name="details_text_model">Model</string>
@@ -15,5 +15,10 @@
     <string name="details_button_follow">Follow</string>
     <string name="details_button_pic">Pics</string>
     <string name="main_button_scan">Scan</string>
+    <string name="main_button_upload">Upload Ad</string>
+    <string name="alarm_service_started">The alarm service has started running</string>
+    <string name="alarm_service_finished">The alarm service has finished running</string>
+    <string name="alarm_service_label">Sample Alarm Service</string>
+    <string name="title_activity_pics">PicsActivity</string>
 
 </resources>
